--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "mycube",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "8.9.4"
+  },
   "scripts": {
+    "start": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
