--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "8.9.4"
+    "node": "8.9.4",
+    "yarn": "1.4.0"
   },
   "scripts": {
     "start": "vue-cli-service serve",
