--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,8 @@ jobs:
         
       # run tests!
       - run: yarn test:unit
+  deployment:
+    staging:
+      branch: master
+      heroku:
+        appname: zcube
