--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,10 +33,38 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
         
-      # run tests!
+      # run tests and build!
       - run: yarn test:unit
-  deployment:
-    staging:
-      branch: master
-      heroku:
-        appname: zcube
+      - run: yarn build
+  deploy:
+    machine:
+        enabled: true
+    working_directory: ~/cube-ui
+    environment:
+      - HEROKU_APP: zcube
+    steps:
+      - restore_cache:
+          keys:
+            - v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+      - restore_cache:
+          keys:
+            - v1-bundle-{{ checksum "Gemfile.lock" }}
+      - restore_cache:
+          keys:
+            - v1-assets-{{ .Environment.CIRCLE_SHA1 }}
+      - checkout
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP.git master
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - checkout_code
+      - build:
+          requires:
+            - checkout_code
+      - deploy:
+          requires:
+            - build          
