--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,8 @@ jobs:
       # - image: circleci/mongo:3.4.4
 
     working_directory: ~/repo
-
+    environment:
+      - HEROKU_APP: zcube
     steps:
       - checkout
 
@@ -35,6 +36,7 @@ jobs:
       # run tests and build!
       - run: yarn test:unit
       - run: yarn build
+      - run: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP.git master
   deploy:
     machine:
         enabled: true
